@@ -8,6 +8,7 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.temporal.TemporalAdjusters;
+import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -16,24 +17,18 @@ import java.util.stream.Collectors;
 @Service
 public class NotificationUtil {
 
-    // 현재 요일 이후 가장 빠른 반복 요일을 찾음
     public DayOfWeek findNextDay(List<DayOfWeek> repeatDays, DayOfWeek currentDay) {
+        repeatDays.sort(Comparator.comparingInt(DayOfWeek::getValue));
+        System.out.println("repeatDays = " + repeatDays);
         for (DayOfWeek day : repeatDays) {
             if (day.getValue() > currentDay.getValue()) {
-                return day; // 현재 요일보다 나중 요일 반환
+                return day;
             }
         }
-        // 반복문을 다 돌았지만 조건에 맞는 요일이 없으면 첫 번째 요일 반환
-        return repeatDays.get(0);
+        return repeatDays.getFirst();
     }
 
-    // 다음 알림 날짜 계산
     public LocalDateTime calculateNextNotificationTime(LocalDateTime notificationTime, DayOfWeek nextDay) {
-        // nextDay가 현재 요일과 같다면 정확히 1주 후로 설정
-        if (notificationTime.getDayOfWeek() == nextDay) {
-            return notificationTime.plusWeeks(1);
-        }
-        // 그렇지 않다면, 다음 해당 요일로 이동
         return notificationTime.with(TemporalAdjusters.next(nextDay));
     }
 
